fix post visibility

--- a/src/components/Post/css/style.module.css
+++ b/src/components/Post/css/style.module.css
@@ -1,11 +1,12 @@
 .postContainer {
   width: 100%;
   max-width: 600px;
-  background-color: #ffffff;
+  background-color: var(--gray-100);
   border-radius: 0.8rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
   padding: 1rem;
+  border: 1px solid var(--gray-400);
 }
 
 .postHeader {
